--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
   margin: auto;
   margin-top: 10px;
   border:5px solid black;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 .display-container{
@@ -62,6 +62,7 @@
     align-items: center;
     border: 1px solid black;
     border-radius: 50%;
+    position:relative;
 }
 .buttons-center{
     width:50%;
@@ -72,4 +73,61 @@
     align-items: center;
     color:white;
     background-color: dimgray;
+    border:none;
 } 
+
+.button-menu{
+  position: absolute;
+  display: flex;
+  top: 0px;
+  width: 50%;
+  height: 30%;
+  font-size: 25px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border:none;
+  background-color: transparent;
+}
+
+.button-left{
+  position: absolute;
+  display: flex;
+  left: 0px;
+  width: 25%;
+  height: 25%;
+  font-size: 25px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border:none;
+  background-color: transparent;
+}
+
+.button-right{
+  position: absolute;
+  display: flex;
+  right: 0px;
+  width: 25%;
+  height: 25%;
+  font-size: 25px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border:none;
+  background-color: transparent;
+}
+
+.button-play-pause{
+  position: absolute;
+  display: flex;
+  bottom: 0px;
+  width: 50%;
+  height: 25%;
+  font-size: 25px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border:none;
+  background-color: transparent;
+}
