--- a/src/App.css
+++ b/src/App.css
@@ -148,7 +148,7 @@ border-style: groove;
 	height: 100%;
 	position: absolute;
 	left: 0%;
-	background-color: lightblue;
+	background: linear-gradient(to right, #000046, #1cb5e0);
   box-shadow: 0px 0px 12px 1px rgb(82, 82, 82);
   box-shadow: none;
   overflow-x: hidden;
@@ -182,12 +182,12 @@ border-style: groove;
 }
 
 .display-menu>.selected {
-    background-color:rgb(255, 89, 213);
+    background-color:rgb(196, 57, 140);
 } 
 
 .logo{
-  background-color: rgb(235, 182, 8);
-  color:white;
+  background: linear-gradient(to right, #f12711, #f5af19);
+  color:rgb(255, 255, 255);
   font-size: large;
 } 
 
@@ -201,6 +201,7 @@ border-style: groove;
     box-sizing: border-box;
     overflow:hidden;
 }
+
 .display-music
 {
     height:100%;
@@ -227,7 +228,52 @@ border-style: groove;
     box-sizing: border-box;
     overflow:hidden;
 }
+/***** games display*******/
+.display-games h1{
+  position: absolute;
+  display: flex;
+  color: whitesmoke; 
+  margin: 0.8rem 7.4rem;
+  font-weight: bold;
+}
+.display-games img {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
 
+/******Gallery Display *****/
+.display-gallery h1{
+  position: absolute;
+  display: flex;
+  color: whitesmoke; 
+  margin: 0.8rem 7.4rem;
+  font-weight: bold;
+}
+.display-gallery img {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+}
+
+/******Setting Display *****/
+.display-setting h1{
+  position: absolute;
+  display: flex;
+  color: whitesmoke; 
+  margin: 0.8rem 7.4rem;
+  font-weight: bold;
+}
+.display-setting img {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: #282c34;
+}
 /***** Songs Dispaly *****/
 .all-songs
 {
@@ -239,8 +285,9 @@ border-style: groove;
 }
 .all-songs-heading
 {
+  color: black;
     padding-bottom:10px;
-    background-color: rgb(255, 51, 0);
+    background: linear-gradient(to right, #f00000, #dc281e); 
     margin:0px;
     opacity:0.8;
     height:10%;
@@ -248,7 +295,11 @@ border-style: groove;
 }
 .all-songs-list
 {
+    font-size: 1.3rem;
+    font-weight: bolder;
+    color: whitesmoke;
     height:86%;
+    background: linear-gradient(to right, #34e89e, #0f3443);
 }
 .all-songs-list>div
 {
@@ -316,11 +367,11 @@ border-style: groove;
     }
     75%
     {
-        background-color:rgb(223, 65, 183);
+        background-color:rgb(226, 89, 192);
     }
     100%
     {
-        background-color: rgb(255, 82, 82);
+        background-color: rgb(136, 223, 114);
     }
 }
 
