--- a/src/App.css
+++ b/src/App.css
@@ -44,9 +44,7 @@
   border:10px solid lightgray;
   border-radius: 25px;
   background: linear-gradient(to top, #8e9eab, #eef2f3); 
-border-style: groove;
-
-
+  border-style: groove;
 }
 
 .display-container{
@@ -220,7 +218,7 @@ border-style: groove;
     box-sizing: border-box;
     overflow:hidden;
 }
-.display-coverflow
+.display-gallery
 {
     height:100%;
     width:100%;
@@ -274,6 +272,38 @@ border-style: groove;
   height: 100%;
   background-color: #282c34;
 }
+
+/**********Artits Display*****************/
+.display-artists h1{
+  position: absolute;
+  display: flex;
+  color: whitesmoke; 
+  margin: 0.8rem 7.4rem;
+  font-weight: bold;
+}
+.display-artists img {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+/***** Album display*******/
+.display-album h1{
+  position: absolute;
+  display: flex;
+  color: whitesmoke; 
+  margin: 0.8rem 7.4rem;
+  font-weight: bold;
+}
+.display-album img {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+}
+
 /***** Songs Dispaly *****/
 .all-songs
 {
