Fix Music Files

--- a/src/App.css
+++ b/src/App.css
@@ -204,7 +204,7 @@
 {
     height:100%;
     width:100%;
-    background-color: white;
+    background-color: red;
     /* background-color: rgb(28, 250, 158); */
     /* background: linear-gradient(to right, #ada996, #f2f2f2, #dbdbdb, #eaeaea);   */
   }
